packaging/deploy/kubernetes/kubernetes.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: ssp-demo
  name: ssp-demo
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      name: ssp-demo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: ssp-demo
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - ssp-demo
            topologyKey: kubernetes.io/hostname
      containers:
      - image: docker.io/acksyn/self-service-password:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 15
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 8
        name: ssp
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 4
        resources:
          limits:
            cpu: 100m
            memory: 320Mi
          requests:
            cpu: 50m
            memory: 256Mi
        volumeMounts:
        - mountPath: /etc/apache2/sites-enabled/000-default.conf
          name: apache-config
          subPath: virtualhost.conf
        - mountPath: /usr/bin/prehook.sh
          name: ssp-scripts
          subPath: prehook.sh
        - mountPath: /usr/bin/posthook.sh
          name: ssp-scripts
          subPath: posthook.sh
        - mountPath: /var/www/conf/config.inc.local.php
          name: ssp-config
          subPath: config.php
        - mountPath: /var/www/templates_c
          name: tmp
      volumes:
      - emptyDir: {}
        name: tmp
      - configMap:
          name: ssp-demo
        name: apache-config
      - secret:
          secretName: ssp-demo
        name: ssp-config
      - configMap:
          name: ssp-demo
          defaultMode: 0777
        name: ssp-scripts
---
apiVersion: v1
kind: Service
metadata:
  name: ssp-demo
spec:
  ports:
  - name: tcp-8080
    port: 8080
  selector:
    name: ssp-demo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssp-demo
spec:
  rules:
  - host: ssp.example.com
    http:
      paths:
      - backend:
          service:
            name: ssp-demo
            port:
              number: 8080
